<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.xiaolong.exercises.exercise_07_many_intents.Exercise_07_MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exercise_07_show_website_button_text"
                android:id="@+id/exercise_07_show_website_button"
                android:layout_alignParentTop="true"
                android:onClick="on_show_website"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exercise_07_show_website_search_term_button_text"
                android:id="@+id/exercise_07_show_website_search_term_button"
                android:layout_below="@+id/exercise_07_show_website_button"
                android:layout_alignStart="@+id/exercise_07_show_website_button"
                android:onClick="on_show_website_search_term"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exercise_07_show_maps_button_text"
                android:id="@+id/exercise_07_show_maps_button"
                android:layout_below="@+id/exercise_07_show_website_search_term_button"
                android:layout_alignStart="@+id/exercise_07_show_website_search_term_button"
                android:onClick="on_show_maps_with_location"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exercise_07_show_contact_button_text"
                android:id="@+id/exercise_07_show_contact_button"
                android:layout_below="@+id/exercise_07_show_maps_button"
                android:layout_alignEnd="@+id/exercise_07_show_maps_button"
                android:onClick="on_show_contact"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exercise_07_show_number_button_text"
                android:id="@+id/exercise_07_show_number_button"
                android:layout_below="@+id/exercise_07_show_contact_button"
                android:layout_alignStart="@+id/exercise_07_show_contact_button"
                android:onClick="on_show_number"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exercise_07_dial_number_button_text"
                android:id="@+id/exercise_07_dial_number_button"
                android:layout_below="@+id/exercise_07_show_number_button"
                android:layout_alignStart="@+id/exercise_07_show_number_button"
                android:onClick="on_dial_number"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exercise_07_create_alarm_button_text"
                android:id="@+id/exercise_07_create_alarm_button"
                android:layout_below="@+id/exercise_07_dial_number_button"
                android:layout_alignStart="@+id/exercise_07_dial_number_button"
                android:onClick="on_create_alarm"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exercise_07_create_date_button_text"
                android:id="@+id/exercise_07_create_date_button"
                android:layout_gravity="center_horizontal"
                android:onClick="on_create_date"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exercise_07_send_mail_button_text"
                android:id="@+id/exercise_07_send_mail_button"
                android:layout_below="@+id/exercise_07_create_alarm_button"
                android:layout_alignStart="@+id/exercise_07_create_alarm_button"
                android:onClick="on_send_email"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exercise_07_show_sms_button_text"
                android:id="@+id/exercise_07_show_sms_button"
                android:layout_gravity="center_horizontal"
                android:onClick="on_show_sms"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exercise_07_send_sms_button_text"
                android:id="@+id/exercise_07_send_sms_button"
                android:layout_below="@+id/exercise_07_send_mail_button"
                android:layout_alignStart="@+id/exercise_07_send_mail_button"
                android:onClick="on_send_sms"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
