<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".exercise_03_inter_activity_data_exchange.Exercise_03_MainActivity">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/exercise_03_textview_text"
            android:id="@+id/exercise_03_textview"
            android:layout_column="0"
            android:layout_span="3"
            android:gravity="center"
            android:layout_weight="0.2"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exercise_03_color_button_text"
            android:id="@+id/exercise_03_color_button"
            android:layout_column="0"
            android:layout_weight="0.33"
            android:onClick="on_color"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exercise_03_alignment_button_text"
            android:id="@+id/exercise_03_alignment_button"
            android:layout_column="1"
            android:layout_weight="0.33"
            android:onClick="on_alignment"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exercise_03_font_button_text"
            android:id="@+id/exercise_03_font_button"
            android:layout_column="2"
            android:layout_weight="0.33"
            android:onClick="on_font"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exercise_03_test_button_text"
            android:id="@+id/exercise_03_test_button"
            android:layout_column="0"
            android:layout_weight="1"
            android:onClick="on_test"/>
    </TableRow>
</TableLayout>
